# winit-ios-test

./: Cargo.toml  Readme.md  t.txt
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/app/src/client/: mod.rs
crates/app/src/shared/: components.rs  mod.rs
src/: app.rs  gpu.rs  lib.rs  main.rs  tracing.rs
winit-ios/winit-ios/: AppDelegate.swift  Bridge.h  CustomSchemeHandler.swift  CustomSchemeHandler2.swift  Launch Screen.storyboard  MetalView.swift  Storyboard.storyboard  ViewController.swift  winit_ios_Bridging_Header_h.h
winit-ios/winit-ios.xcodeproj/: project.pbxproj
winit-ios/winit-ios.xcodeproj/project.xcworkspace/xcuserdata/joep.xcuserdatad/: UserInterfaceState.xcuserstate
winit-ios/winit-ios.xcodeproj/project.xcworkspace/xcuserdata/user265135.xcuserdatad/: UserInterfaceState.xcuserstate
winit-ios/winit-ios.xcodeproj/xcuserdata/user265135.xcuserdatad/xcschemes/: xcschememanagement.plist
