[package]
name = "winit-ios"
version = "0.1.0"
edition = "2021"

[lib]
name = "winitios"
crate-type = ["staticlib"]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = {version="0.29.15" }
mobile-entry-point = "0.1.1"
log = "0.4.22"
wgpu = "22.0.0"
raw-window-handle = "0.6"
pollster = "0.3.0"
specs = "0.20.0"