[package]
name = "winit-ios"
version = "0.1.0"
edition = "2021"

[lib]
name = "winitios"
crate-type = ["staticlib"]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = {version="0.28", default-features=false }
mobile-entry-point = "0.1.1"
ambient_app = {path = "../Ambient/crates/app"}
ambient = {path = "crates/app"}
libc = "0.2"