[package]
edition = "2021"
name = "ambient"
version = "0.3.1"
rust-version = "1.70.0"
repository = "https://github.com/AmbientRun/Ambient"

[dependencies]
ambient_sys = { path = "../../../../ambient_stuffs/Ambient/crates/sys" , version = "0.3.1" }
ambient_app = { path = "../../../../ambient_stuffs/Ambient/crates/app" , version = "0.3.1" }
ambient_audio = { path = "../../../../ambient_stuffs/Ambient/crates/audio" , version = "0.3.1" }
ambient_cameras = { path = "../../../../ambient_stuffs/Ambient/crates/cameras" , version = "0.3.1" }
ambient_core = { path = "../../../../ambient_stuffs/Ambient/crates/core" , version = "0.3.1" }
#ambient_debugger = { path = "../../../../ambient_stuffs/Ambient/crates/debugger" , version = "0.3.1" }
ambient_decals = { path = "../../../../ambient_stuffs/Ambient/crates/decals" , version = "0.3.1" }
ambient_ecs = { path = "../../../../ambient_stuffs/Ambient/crates/ecs" , version = "0.3.1" }
ambient_gizmos = { path = "../../../../ambient_stuffs/Ambient/crates/gizmos" , version = "0.3.1" }
ambient_network = { path = "../../../../ambient_stuffs/Ambient/crates/network" , version = "0.3.1" }
ambient_prefab = { path = "../../../../ambient_stuffs/Ambient/crates/prefab" , version = "0.3.1" }
ambient_physics = { path = "../../../../ambient_stuffs/Ambient/crates/physics" , version = "0.3.1" }
ambient_primitives = { path = "../../../../ambient_stuffs/Ambient/crates/primitives" , version = "0.3.1" }
ambient_rpc = { path = "../../../../ambient_stuffs/Ambient/crates/rpc" , version = "0.3.1" }
ambient_renderer = { path = "../../../../ambient_stuffs/Ambient/crates/renderer" , version = "0.3.1" }

ambient_native_std = { path = "../../../../ambient_stuffs/Ambient/crates/native_std" , version = "0.3.1" }
ambient_ui_native = { path = "../../../../ambient_stuffs/Ambient/crates/ui_native" , version = "0.3.1" }
ambient_world_audio = { path = "../../../../ambient_stuffs/Ambient/crates/world_audio" , version = "0.3.1" }
ambient_sky = { path = "../../../../ambient_stuffs/Ambient/crates/sky" , version = "0.3.1" }
ambient_water = { path = "../../../../ambient_stuffs/Ambient/crates/water" , version = "0.3.1" }
ambient_client_shared = { path = "../../../../ambient_stuffs/Ambient/crates/client_shared/" , version = "0.3.1" }
ambient_package_semantic_native = { path = "../../../../ambient_stuffs/Ambient/crates/package_semantic_native" , version = "0.3.1" }
ambient_settings = { path = "../../../../ambient_stuffs/Ambient/crates/settings" , version = "0.3.1" }
ambient_git_rev_init = { path = "../../../../ambient_stuffs/Ambient/crates/git_rev_init" , version = "0.3.1" }
ambient_std = { path = "../../../../ambient_stuffs/Ambient/shared_crates/std" , version = "0.3.1" }
ambient_element = { path = "../../../../ambient_stuffs/Ambient/shared_crates/element" , version = "0.3.1" }
ambient_dirs = { path = "../../../../ambient_stuffs/Ambient/shared_crates/dirs" , version = "0.3.1" }

once_cell = "1.15.0"
anyhow = { version = "1.0", features = ["backtrace"] }
glam = { version = "0.24", features = ["bytemuck", "serde", "rand"] }
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "1.36", default-features = false,features = ["full"] }
image = "0.24.7"
tracing = {version = "0.1.37",features = ["log-always"]}
winit = { version = "0.28.6", features = ["serde"] }
tracing-stackdriver = "0.6.2"


[dev-dependencies]
glam = { version = "0.24", features = ["bytemuck", "serde", "rand"] }
#rusty-hook = "^0.11.2"

[features]
no_bundled_certs = []
default = ["tls-webpki-roots"]
profile = ["ambient_app/profile"]
tls-native-roots = ["ambient_network/tls-native-roots"]
tls-webpki-roots = ["ambient_network/tls-webpki-roots"]
hotload-includes = [
    "ambient_app/hotload-includes",
    "ambient_decals/hotload-includes",
]
[target.'cfg(not(target_os = "unknown"))'.dependencies]
ambient_wasm = { path = "../../../../ambient_stuffs/Ambient/crates/wasm" , version = "0.3.1" }
#android-ndk = "0.0.6"
#jni = "0.20"
#ndk-context = "0.1.1"